--- a/geocoder/.classpath
+++ b/geocoder/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/jcsv-1.4.0.jar" sourcepath="lib/jcsv-1.4.0-sources.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
