Added jcsv-1.4.0.jar to the classpath in the build.xml so Ant can build the project command-line.

--- a/geocoder/build.xml
+++ b/geocoder/build.xml
@@ -11,6 +11,7 @@
     <property name="source" value="1.6"/>
     <path id="Geocode.classpath">
         <pathelement location="."/>
+        <pathelement location="./lib/jcsv-1.4.0.jar" />
     </path>
     <target name="init">
         <copy includeemptydirs="false" todir=".">
